# cappuccino

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  LICENSE  Pipfile  README.md  alembic.ini  config.dist.ini  config.ini.dist  docker-compose.yml  pyproject.toml  requirements.txt  ricedb_plugin.py  setup.cfg
.github/workflows/: build-docker-image.yml  cappuccino.yml  docker.yml  lint.yml
alembic/: env.py
alembic/versions/: b99364b9b9c3_update_last_seen_timestamp_type.py  c7308e3c814a_seperate_ricedb_json_into_columns.py  ca58ba59b328_.py  e1915be51fb9_delete_chanlog_table.py
cappuccino/: __init__.py  ai.py  botui.py  catfacts.py  chanlog.py  core.py  execshell.py  fun.py  influx.py  lastfm.py  nickserv.py  rice.py  sed.py  seen.py  sentry.py  triggers.py  uptimekuma.py  urlinfo.py  userdb.py
cappuccino/db/alembic/: __init__.py  env.py
cappuccino/db/alembic/versions/: 15a2d5ea1971_switch_all_string_types_to_text.py  3668c91fa898_add_relationship_to_ai_models.py  4dc2c5515277_rename_corpuschannel_status_to_.py  5ebc3fcc5af8_drop_chanlog_and_ricedb_data.py  65969d0d94f3_rename_trigger_trigger_to_trigger_name.py  a71bc86773a8_make_ai_channels_status_and_ai_corpus_.py  b99364b9b9c3_update_last_seen_timestamp_type.py  c7308e3c814a_seperate_ricedb_json_into_columns.py  ca58ba59b328_.py
cappuccino/db/models/: __init__.py  ai.py  triggers.py  userdb.py
cappuccino/util/: __init__.py  channel.py  database.py  formatting.py  meta.py  version.py
docker/: .env.example  compose.yaml  docker-compose.dev.yml
docker/entrypoint.d/: 10-config.sh  20-fix-perms.sh  30-migrate-db.sh  40-start.sh
docker/rootfs/: docker-entrypoint.sh  docker-env2conf.py  docker-init.sh
docker/rootfs/etc/cont-init.d/: 10-config  20-fix-perms  30-migrate-db
docker/rootfs/etc/services.d/app/: run
plugins/: ai.py  autopsy.py  botui.py  cache.py  chanlog.py  crypto.py  currency.py  database.py  execshell.py  formatting.py  fun.py  lastfm.py  nickserv.py  rice.py  ricedb.py  sed.py  seen.py  sentry.py  triggers.py  unixporn.py  urlinfo.py  userdb.py  wtc.py
plugins/util/: __init__.py  formatting.py
util/: channel.py  database.py  formatting.py
