[project]
name = "cappuccino"
description = "Just another IRC bot."
authors = [{ name = "Lee Watson", email = "me@lwatson.dev" }]
version = "1.17.2"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "irc3 (>=1.1.0,<2.0.0)",
    "markovify (>=0.9.0,<1.0.0)",
    "pylast (>=5.0.0,<6.0.0)",
    "ujson (>=5.1.0,<6.0.0)",
    "requests (>=2.27.0,<3.0.0)",
    "sentry-sdk (>=2.8.0,<3.0.0)",
    "urllib3 (>=2.2.2,<3.0.0)",
    "beautifulsoup4 (>=4.10.0,<5.0.0)",
    "bottle (>=0.13.0,<=1.0.0)",
    "sqlalchemy[postgresql] (>=1.4.0,<2.0.0)",
    "alembic (>=1.7.0,<2.0.0)",
    "humanize (>=4.0.0,<5.0.0)",
    "html5lib (>=1.1,<2.0)",
    "ircstyle (>=0.1.1)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "influxdb-client (>=1.26.0,<2.0.0)",
]

[dependency-groups]
dev = [
    "pre-commit (>=4.0.0,<5.0.0)",
    "pre-commit-hooks (>=5.0.0,<6.0.0)",
    "ruff (>=0.9.0,<1.0.0)",
    "shellcheck-py (>=0.10.0.1)",
]
docker = ["jinja2 (>=3.1.3,<4.0.0)"]

[tool.ruff]
force-exclude = true
extend-exclude = ["docker/data/", "docker/config/"]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "C90",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FIX",
    "FURB",
    "I",
    "N",
    "PL",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
    "YTT",
]

# ruff format compatibility
ignore = ["E501"]

extend-ignore = ["RUF012", "PLR09", "PLW2901"]

[tool.ruff.lint.extend-per-file-ignores]
"alembic/*" = ["ERA001"]

[tool.ruff.format]
line-ending = "lf"
