[project]
name = "cappuccino"
description = "Just another IRC bot."
authors = [{ name = "Lee Watson", email = "me@lwatson.dev" }]
version = "1.17.4"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.15.2",
    "beautifulsoup4>=4.13.4",
    "bottle>=0.13.3",
    "html5lib>=1.1",
    "humanize>=4.12.3",
    "influxdb-client>=1.48.0",
    "irc3 (>=1.1.0,<2.0.0)",
    "ircstyle>=0.1.5",
    "markovify>=0.9.4",
    "psycopg2-binary>=2.9.10",
    "pylast>=5.5.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sentry-sdk>=2.27.0",
    "sqlalchemy (>=1.4.0,<2.0.0)",
    "ujson>=5.10.0",
    "urllib3>=2.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pre-commit-hooks>=5.0.0",
    "ruff>=0.9.0",
    "shellcheck-py>=0.10.0.1",
]
docker = ["jinja2>=3.1.3"]

[tool.ruff]
force-exclude = true
extend-exclude = ["docker/data/", "docker/config/"]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "C90",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FIX",
    "FURB",
    "I",
    "N",
    "PL",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
    "YTT",
]

# ruff format compatibility
ignore = ["E501"]

extend-ignore = ["RUF012", "PLR09", "PLW2901"]

[tool.ruff.format]
line-ending = "lf"
